--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -7,16 +7,16 @@
 #titulo {
     color: white;
     display: flex;
-    padding-left: 60px;
+    padding-left: 120px;
 }
 
 .logoEMA {
-    height: 5rem;
+    height: 7rem;
     width: auto;
 }
 
 #espaconavbar {
-width: 50vw;
+width: 45vw;
 }
 
 .pages_nav {
@@ -29,9 +29,9 @@ width: 50vw;
 
 #cab {
     display: flex;
-    background-color: rgb(0, 0, 255);
-    height: 15vh;
-    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.7);
+    height: 20vh;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     overflow-y: hidden;
@@ -87,7 +87,7 @@ width: 50vw;
 .main {
 display: flex;
 height: 85vh;
-width: 100vw;
+width: 100%;
 justify-content: center;
 gap: 1rem;
 }
