--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -15,55 +15,64 @@ main {
 
 section {
     border-radius: 2rem;
-    width: 30vw;
-    height: 60vh;
+    width: 40vw;
+    height: 90vh;
     background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
 }
 
 #externalcontent {
     color: white;
-    width: 100%;
     height: 40vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-top: 2rem;
+    gap: 4rem;
 }
 
 #internalcontent {
     display: flex;
     flex-direction: column;
-width: 100%;
+    width: 100%;
+    gap: 1rem;
+}
+
+.imagediv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 18vw;
+    height: 35vh;
+    text-align: center;
 }
 
 #image {
-    padding-top: 1rem;
-    width: auto;
-    height: 20vh;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 15vw;
+    height: auto;
 }
 
 .divinput {
-width: 100%;
+    width: 30vw;
     display: flex;
-    text-align: center;
-    padding: .5rem;
+    align-items: center;
+    justify-content: center;
 }
 #Senha{
-padding-left: 0.6rem;
+
 }
-#password{
-    width: 89%;
-}
+
 .labelcustom {
-    padding: .1rem;
+    width: 30%;
 }
 
 .inputcustom {
-    width: 88%;
+    width: 100%;
 }
 
 #button_a {
@@ -77,7 +86,6 @@ padding-left: 0.6rem;
     width: 100%;
     justify-content: center;
     align-items: center;
-padding-top: 1rem;
     height: 20vh;
     justify-self:flex-end;
 }
@@ -101,16 +109,17 @@ padding-top: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
-    height: 50%;
-    gap: 1rem;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    gap: .5rem;
 }
 
 #btnsubmit {
     border-radius: .5rem;
     align-self: center;
-    width: 8rem;
-    height: 5vh;
+    width: 10vw;
+    height: 7vh;
 }
 
 #btnsubmit:hover {
