--- a/frontend/css/QuemSomos.css
+++ b/frontend/css/QuemSomos.css
@@ -1,6 +1,121 @@
-*{
+* {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
+    
 }
 
+#titulo {
+    color: white;
+    display: flex;
+    width: 30vw;
+    padding-left: 0px;
+}
+
+.caloi {
+    padding-left: 80px;
+}
+
+#cab {
+    display: flex;
+    background-color: red;
+    height: 13.5vh;
+    width: 100vw;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#menu {
+    padding-right: 40px;
+}
+.topnav:hover{
+    background-color: rgb(221, 0, 0);
+    border-radius: 15px;
+}
+.topnav {
+    
+    text-decoration: none;
+    padding-right: 40px;
+    color: black;
+    font-weight: 1000;
+    padding: 10px;
+    font-size: 23px;
+}
+.botoestopo {
+    display: flex;
+    justify-content: flex-end;
+    height: auto;
+    width: 10vw;
+}
+.dropdown {
+    /* position: relative; */
+    display: inline-block;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  .projetos {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+  }
+  .projetos:hover {
+    background-color: #777;
+  }
+.quemsomos {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-left: 80px;
+    font-size: 40px;
+    font-weight: bold;
+}
+#caixas {
+    gap: 70px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
+    /* border: 3px solid white; */
+    padding: 30px;
+}
+
+.caixatexto {
+    background-color:rgba(0, 0, 0, 0.1);
+    /* border: 3px solid white; */
+    border-radius: 20px;
+}
+.textos {
+    text-align: center;
+    font-size: 16px;
+    width: 25vw;
+    color: rgb(0, 0, 0);
+    /* border: 3px solid white */
+}
+
+.titulos {
+    text-align: center;
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 25vw;
+    color: rgb(0, 0, 0);
+    /* border: 3px solid white */
+}
+#footer {
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 10000;
+}
