--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -22,6 +22,7 @@
     justify-content: center;
     justify-self: end;
     gap: 2rem;
+
 }
 
 #cab {
@@ -32,14 +33,15 @@
     justify-content: space-around;
     align-items: center;
     overflow-y: hidden;
-    position:fixed;
+    position: fixed;
+    z-index: 999;
 }
 
 #menu {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    gap: 30rem;
+    gap: 15rem;
     width: 100%;
     height: 100%;
 }
@@ -65,16 +67,17 @@
 .dropdown {
     /* position: relative; */
     display: inline-block;
+
 }
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
-    z-index: 1;
+    z-index: 1000;
 }
 
 .dropdown:hover .dropdown-content {
@@ -84,7 +87,7 @@
 .cursos {
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: 1.1rem;
 }
 
 .cursos:hover {
@@ -96,6 +99,7 @@
     flex-direction: column;
     gap: 1rem;
     background-color: rgb(0, 89, 0);
+    z-index: 1;
 }
 
 #div1 {
