--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -7,7 +7,7 @@
 main {
     width: 100vw;
     height: 100vh;
-    background-color: rgba(128, 128, 128);
+    background-color: rgb(0, 179, 255);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,7 +17,7 @@ section {
     border-radius: 2rem;
     width: 40vw;
     height: 90vh;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 89, 0, 1);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,9 +63,7 @@ section {
     align-items: center;
     justify-content: center;
 }
-#Senha{
 
-}
 
 .labelcustom {
     width: 30%;
